fix tinkering spacing

--- a/assets/css/two_section_style.css
+++ b/assets/css/two_section_style.css
@@ -53,7 +53,7 @@ body{
 	/* display: table; */
 	margin: 0 auto;
 	position: relative;
-	top: 15%;
+	top: 20%;
 	transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);
 	-moz-transform: translateY(-50%);
@@ -211,7 +211,7 @@ width: 950px;
 	
 /* height: 80%; */
 	
-top: 30%;
+top: 35%;
 	
 z-index: 120;
 	
